# fast-web-auth

./: .env.example  .gitignore  Makefile  README.md  config.py  database.db  main.py  pyproject.toml
auth/: dependencies.py  middleware.py  models.py  router.py  service.py
db/: database.py  fake.py  models.py
scripts/: create_test_user.py  create_user.py
templates/: login.html  logout.html  welcome.html
tests/: conftest.py  test_auth_service.py  test_endpoints.py
