[project]
name = "fast-web-auth"
version = "0.1.0"
description = "Basic FastAPI Web AuthN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "scripts"

[project.scripts]
create-test-user = "scripts.create_test_user:main"

[tool.fastapi]
entrypoint = "main:app"
